<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PostActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/Toolbar_PostActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/customWhite"
        app:title="@string/String_PostActivity_ToolbarTitle" />

    <ScrollView
        android:id="@+id/ScrollView_PostActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/LightGray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/String_UiForms_OriginCity"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_rectangle"
                android:orientation="vertical"
                android:padding="5dp">

                <Spinner
                    android:id="@+id/Spinner_PostActivity_OriginCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/String_UiForms_DestinationCity"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_rectangle"
                android:orientation="vertical"
                android:padding="5dp">

                <Spinner
                    android:id="@+id/Spinner_PostActivity_DestinationCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/String_PostActivity_DateTime"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_rectangle"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@null"
                            android:src="@drawable/ic_calendar_black_24dp"
                            android:tint="@color/Gray" />


                        <EditText
                            android:id="@+id/EditText_PostActivity_Date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/customWhite"
                            android:focusable="false"
                            android:hint="@string/String_PostActivity_Date"
                            android:inputType="date" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/shape_rectangle"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@null"
                            android:src="@drawable/ic_time_24dp"
                            android:tint="@color/Gray" />


                        <EditText
                            android:id="@+id/EditText_PostActivity_Time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/customWhite"
                            android:focusable="false"
                            android:hint="@string/String_PostActivity_Time"
                            android:inputType="time" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/String_PostActivity_NumberOfSeats"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/RadioGroup_PostActivity_NumberOfSeats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/shape__post_activity__unselected_number_of_seats_rectangle"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/String_Num_1"
                    android:textColor="@color/Gray" />

                <RadioButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/shape__post_activity__unselected_number_of_seats_rectangle"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/String_Num_2"
                    android:textColor="@color/Gray" />

                <RadioButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/shape__post_activity__unselected_number_of_seats_rectangle"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/String_Num_3"
                    android:textColor="@color/Gray" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/String_PostActivity_Price"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_rectangle"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_money_24dp"
                    android:tint="@color/Gray" />


                <EditText
                    android:id="@+id/EditText_PostActivity_Price"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/customWhite"
                    android:inputType="number" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/String_UiForms_DoorToDoorService"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_rectangle"
                android:orientation="horizontal"
                android:padding="5dp">

                <Switch
                    android:id="@+id/Switch_PostActivity_DoorToDoorService"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:theme="@style/SwitchPostTheme" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout_PostActivity_DoorToDoor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/String_UiForms_SelectYourStartingLocation"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_rectangle"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_map_marker_pin_24dp"
                        android:tint="@color/Gray" />


                    <EditText
                        android:id="@+id/EditText_PostActivity_DoorToDoorOrigin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/customWhite"
                        android:focusable="false"
                        android:hint="@string/String_UiForms_StartingLocation"
                        android:inputType="date" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/String_UiForms_SelectYourDestinationLocation"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shape_rectangle"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@null"
                        android:src="@drawable/ic_map_marker_pin_24dp"
                        android:tint="@color/Gray" />


                    <EditText
                        android:id="@+id/EditText_PostActivity_DoorToDoorDestination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/customWhite"
                        android:focusable="false"
                        android:hint="@string/String_UiForms_DestinationLocation"
                        android:inputType="date" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout_PostActivity_RoutePreview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/String_UiForms_RoutePreview"
                        android:textStyle="bold" />

                    <fragment
                        android:id="@+id/Fragment_PostActivity_RoutePreview"
                        android:name="com.festeban26.ayni.google.maps.WorkaroundMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="300dp" />

                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/Button_PostActivity_Post"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/String_PostActivity_PostTrip"
                android:theme="@style/PostTheme" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>