<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SearchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/Toolbar_SearchActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/customWhite"
        app:title="@string/String_SearchActivity_ToolbarTitle" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/LightGray"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/String_UiForms_OriginCity"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_rectangle"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_location_black_24dp"
                    android:tint="@color/Gray" />

                <Spinner
                    android:id="@+id/Spinner_SearchActivity_OriginCity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/String_UiForms_DestinationCity"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_rectangle"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_location_black_24dp"
                    android:tint="@color/Gray" />

                <Spinner
                    android:id="@+id/Spinner_SearchActivity_DestinationCity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/String_UiForms_DepartureDate"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_rectangle"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_calendar_black_24dp"
                    android:tint="@color/Gray" />

                <EditText
                    android:id="@+id/EditText_SearchActivity_Date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/customWhite"
                    android:focusable="false"
                    android:hint="@string/String_SearchActivityDateEditText_Hint" />

            </LinearLayout>

            <Button
                android:id="@+id/Button_SearchActivity_Search"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/String_SearchActivitySearchButton"
                android:theme="@style/SearchTheme" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>